jdk 11 -> jdk 8; intellij 17+ is unusable :(